--- a/FrogFu/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/FrogFu/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -400,7 +400,7 @@ UdpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,Enhan
 WmfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierSmoothDelta,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,IOSRuntimeSettings.Remote Build.Remote Build Options,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options,TakeRecorderProjectSettings.Audio Input Device.AudioInputDevice
 SkyAtmosphere=PostProcessVolume.Lens.Lens
 Blueprint=Blueprint.Interfaces.Implemented Interfaces,BP_SimpleAI_C.Physics.ConstraintsGroup,BP_SimpleAI_C.Materials.MaterialList
-Blueprint=Blueprint.Interfaces.Implemented Interfaces
+Blueprint=Blueprint.Interfaces.Implemented Interfaces,BP_SimpleAI_C.Physics.ConstraintsGroup,BP_SimpleAI_C.Materials.MaterialList,PropertyWrapper.DefaultValueCategory.NormalStyle,PropertyWrapper.DefaultValueCategory.HoveredStyle,K2Node_VariableGet.DefaultValueCategory.NormalStyle,K2Node_VariableGet.DefaultValueCategory.AvailableScreenResolutions,=======
 EdGraph=Blueprint.Interfaces.Implemented Interfaces,BP_SimpleAI_C.Physics.ConstraintsGroup,BP_SimpleAI_C.Materials.MaterialList
 EdGraph=Blueprint.Interfaces.Implemented Interfaces,BP_SimpleAI_C.Physics.ConstraintsGroup,BP_SimpleAI_C.Materials.MaterialList,PropertyWrapper.DefaultValueCategory.NormalStyle,PropertyWrapper.DefaultValueCategory.HoveredStyle,K2Node_VariableGet.DefaultValueCategory.NormalStyle,K2Node_VariableGet.DefaultValueCategory.AvailableScreenResolutions,=======
 SkeletalMeshComponent========,Blueprint.Interfaces.Implemented Interfaces,BP_SimpleAI_C.Physics.ConstraintsGroup,BP_SimpleAI_C.Materials.MaterialList,PropertyWrapper.DefaultValueCategory.NormalStyle,PropertyWrapper.DefaultValueCategory.HoveredStyle,K2Node_VariableGet.DefaultValueCategory.NormalStyle,K2Node_VariableGet.DefaultValueCategory.AvailableScreenResolutions
@@ -418,7 +418,7 @@ EdGraphNode_Comment========,Blueprint.Interfaces.Implemented Interfaces,BP_Simpl
 WBP_Menu_Main_C=Blueprint.Interfaces.Implemented Interfaces
 WBP_Component_Button_Default_C=Blueprint.Interfaces.Implemented Interfaces,BP_SimpleAI_C.Physics.ConstraintsGroup,BP_SimpleAI_C.Materials.MaterialList,PropertyWrapper.DefaultValueCategory.NormalStyle,PropertyWrapper.DefaultValueCategory.HoveredStyle,K2Node_VariableGet.DefaultValueCategory.NormalStyle,K2Node_VariableGet.DefaultValueCategory.AvailableScreenResolutions
 WBP_Menu_Pause_C=Blueprint.Interfaces.Implemented Interfaces,BP_SimpleAI_C.Physics.ConstraintsGroup,BP_SimpleAI_C.Materials.MaterialList,PropertyWrapper.DefaultValueCategory.NormalStyle,PropertyWrapper.DefaultValueCategory.HoveredStyle,K2Node_VariableGet.DefaultValueCategory.NormalStyle
-K2Node_FunctionResult=Blueprint.Interfaces.Implemented Interfaces,BP_SimpleAI_C.Physics.ConstraintsGroup,BP_SimpleAI_C.Materials.MaterialList,PropertyWrapper.DefaultValueCategory.NormalStyle,PropertyWrapper.DefaultValueCategory.HoveredStyle,K2Node_VariableGet.DefaultValueCategory.NormalStyle
+K2Node_FunctionResult=Blueprint.Interfaces.Implemented Interfaces,BP_SimpleAI_C.Physics.ConstraintsGroup,BP_SimpleAI_C.Materials.MaterialList,PropertyWrapper.DefaultValueCategory.NormalStyle,PropertyWrapper.DefaultValueCategory.HoveredStyle,K2Node_VariableGet.DefaultValueCategory.NormalStyle,K2Node_VariableGet.DefaultValueCategory.AvailableScreenResolutions,=======
 K2Node_MacroInstance=Blueprint.Interfaces.Implemented Interfaces,BP_SimpleAI_C.Physics.ConstraintsGroup,BP_SimpleAI_C.Materials.MaterialList,PropertyWrapper.DefaultValueCategory.NormalStyle,PropertyWrapper.DefaultValueCategory.HoveredStyle,K2Node_VariableGet.DefaultValueCategory.NormalStyle,K2Node_VariableGet.DefaultValueCategory.AvailableScreenResolutions
 SwitchUsingGamepad=Blueprint.Interfaces.Implemented Interfaces,BP_SimpleAI_C.Physics.ConstraintsGroup,BP_SimpleAI_C.Materials.MaterialList
 SwitchUsingGamepad_2=Blueprint.Interfaces.Implemented Interfaces,BP_SimpleAI_C.Physics.ConstraintsGroup,BP_SimpleAI_C.Materials.MaterialList
@@ -442,6 +442,8 @@ StaticMeshActor=Blueprint.Interfaces.Implemented Interfaces,BP_SimpleAI_C.Physic
 CameraActor=PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NormalStyle,PropertyWrapper.DefaultValueCategory.HoveredStyle,Blueprint.Interfaces.Implemented Interfaces,BP_SimpleAI_C.Physics.ConstraintsGroup,BP_SimpleAI_C.Materials.MaterialList,K2Node_VariableGet.DefaultValueCategory.NormalStyle,K2Node_VariableGet.DefaultValueCategory.AvailableScreenResolutions,=======,CameraActor.CameraSettings.Overscan
 NavMeshBoundsVolume=PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NormalStyle,PropertyWrapper.DefaultValueCategory.HoveredStyle,Blueprint.Interfaces.Implemented Interfaces,BP_SimpleAI_C.Physics.ConstraintsGroup,BP_SimpleAI_C.Materials.MaterialList,K2Node_VariableGet.DefaultValueCategory.NormalStyle,K2Node_VariableGet.DefaultValueCategory.AvailableScreenResolutions,=======
 PrimitiveComponent=Blueprint.Interfaces.Implemented Interfaces,BP_SimpleAI_C.Physics.ConstraintsGroup,BP_SimpleAI_C.Materials.MaterialList,PropertyWrapper.DefaultValueCategory.NormalStyle,PropertyWrapper.DefaultValueCategory.HoveredStyle,PostProcessVolume.Lens.Lens,K2Node_VariableGet.DefaultValueCategory.NormalStyle,K2Node_VariableGet.DefaultValueCategory.AvailableScreenResolutions,=======
+BP_SoundManager_C=Blueprint.Interfaces.Implemented Interfaces,BP_SimpleAI_C.Physics.ConstraintsGroup,BP_SimpleAI_C.Materials.MaterialList,PropertyWrapper.DefaultValueCategory.NormalStyle,PropertyWrapper.DefaultValueCategory.HoveredStyle,K2Node_VariableGet.DefaultValueCategory.NormalStyle,K2Node_VariableGet.DefaultValueCategory.AvailableScreenResolutions,=======
+WBP_Settings_Sound_C=Blueprint.Interfaces.Implemented Interfaces,BP_SimpleAI_C.Physics.ConstraintsGroup,BP_SimpleAI_C.Materials.MaterialList,PropertyWrapper.DefaultValueCategory.NormalStyle,PropertyWrapper.DefaultValueCategory.HoveredStyle,K2Node_VariableGet.DefaultValueCategory.NormalStyle,K2Node_VariableGet.DefaultValueCategory.AvailableScreenResolutions,=======
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Maps/Nelio
@@ -449,7 +451,7 @@ ContentBrowserTab1.PluginFilters=
 AssetPropertyPicker.ThumbnailSize=2
 AssetPropertyPicker.CurrentViewType=0
 AssetPropertyPicker.ZoomScale=0
-ContentBrowserDrawer.SelectedPaths=/Game/Maps/Max
+ContentBrowserDrawer.SelectedPaths=/Game
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.SourcesExpanded=True
 ContentBrowserDrawer.IsLocked=False
@@ -471,22 +473,25 @@ ContentBrowserDrawer.ExpandedCollections=
 ContentBrowserDrawer.ThumbnailSize=2
 ContentBrowserDrawer.CurrentViewType=1
 ContentBrowserDrawer.ZoomScale=0
-ContentBrowserDrawer.JumpMRU=/All/Game/Maps/Max
+ContentBrowserDrawer.JumpMRU=/All/Game/Sounds/Music
+ContentBrowserDrawer.JumpMRU=/All/Game/Sounds
 ContentBrowserDrawer.JumpMRU=/All/Game
-ContentBrowserDrawer.JumpMRU=/All/Game/Maps
+ContentBrowserDrawer.JumpMRU=/All/Game/Sounds/Sounds
+ContentBrowserDrawer.JumpMRU=/All/Game/UI
+ContentBrowserDrawer.JumpMRU=/All/Game/UI/Components
 ContentBrowserDrawer.JumpMRU=/All/Game/Maps/Onno
 ContentBrowserDrawer.JumpMRU=/All/Game/UI/Components/Menu
-ContentBrowserDrawer.JumpMRU=/All/Game/UI/Components
-ContentBrowserDrawer.JumpMRU=/All/Game/UI
+ContentBrowserDrawer.JumpMRU=/All/Game/UI/Components/Gameplay
+ContentBrowserDrawer.JumpMRU=/All/Game/UI/Components/ScreenMessages
 ContentBrowserDrawer.JumpMRU=/All/Game/Maps/Vincent
+ContentBrowserDrawer.JumpMRU=/All/Game/Maps/Max
+ContentBrowserDrawer.JumpMRU=/All/Game/Maps
 ContentBrowserDrawer.JumpMRU=/All/Game/Maps/Nelio
 ContentBrowserDrawer.JumpMRU=/All/Game/Assets
 ContentBrowserDrawer.JumpMRU=/All/Game/TopDown
 ContentBrowserDrawer.JumpMRU=/All/Game/TopDown/Blueprints
 ContentBrowserDrawer.JumpMRU=/All/Game/Maps/Onno/AI
 ContentBrowserDrawer.JumpMRU=/All/Game/Core
-ContentBrowserDrawer.JumpMRU=/All/Game/UI/Components/ScreenMessages
-ContentBrowserDrawer.JumpMRU=/All/Game/UI/Components/Gameplay
 ContentBrowserDrawer.JumpMRU=/All/Game/TopDown/Input
 ContentBrowserDrawer.JumpMRU=/All/Game/Maps/Onno/Player
 ContentBrowserDrawer.JumpMRU=/All/Game/Cursor
@@ -498,9 +503,6 @@ ContentBrowserDrawer.JumpMRU=/All/Game/UI/Menu
 ContentBrowserDrawer.JumpMRU=/All/Game/UI/Gameplay
 ContentBrowserDrawer.JumpMRU=/All/Game/TopDown/Input/UI
 ContentBrowserDrawer.JumpMRU=
-ContentBrowserDrawer.JumpMRU=/All/Game/Maps/Nelio/Core
-ContentBrowserDrawer.JumpMRU=/All/Game/Maps/Nelio/NewFolder
-ContentBrowserDrawer.JumpMRU=/All/Game/Characters/Mannequins
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.IsLocked=False
 ContentBrowserTab1.FavoritesAreaExpanded=False
@@ -621,7 +623,7 @@ SequenceBrowser.HiddenColumns=Class
 [EditorStartup]
 LastLevel=/Game/Maps/Nelio/TestGroundsNelio
 LastLevel========
-LastLevel=/Game/Maps/Max/MainMenu1
+LastLevel=/Game/TopDown/Maps/TopDownMap
 
 [DetailPropertyExpansion]
 WorldPartitionRuntimeHashSet="\"Object\" "
@@ -815,21 +817,21 @@ Enum="\"Object\" "
 Field="\"Object\" "
 CanvasPanel="\"Object\" "
 PanelWidget="\"Object\" "
-Widget="\"Object\" \"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.BackgroundImage\" \"Object.Style.WidgetStyle.BackgroundImage.ImageSize\" \"Object.Style.WidgetStyle.FillImage\" \"Object.Style.WidgetStyle.FillImage.ImageSize\" \"Object.Appearance.FillColorAndOpacity\" "
-Visual="\"Object\" \"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.BackgroundImage\" \"Object.Style.WidgetStyle.BackgroundImage.ImageSize\" \"Object.Style.WidgetStyle.FillImage\" \"Object.Style.WidgetStyle.FillImage.ImageSize\" \"Object.Appearance.FillColorAndOpacity\" "
-TextBlock="\"Object\" \"Object.Appearance.Font\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Alignment\" "
-TextLayoutWidget="\"Object\" \"Object.Appearance.Font\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Alignment\" "
+Widget="\"Object\" "
+Visual="\"Object\" "
+TextBlock="\"Object\" \"Object.Appearance.Font\" "
+TextLayoutWidget="\"Object\" \"Object.Appearance.Font\" "
 WBP_MainHUDWidget_C="\"Object\" "
 UserWidget="\"Object\" "
 NamedSlot="\"Object\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Alignment\" "
-ContentWidget="\"Object\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Alignment\" "
+ContentWidget="\"Object\" "
 Border="\"Object\" "
 WBP_ScreenMessage_TextOnly_C="\"Object\" "
 WidgetBlueprint="\"Object\" "
 BaseWidgetBlueprint="\"Object\" "
 UserWidgetBlueprint="\"Object\" "
 WBP_ScreenMessage_IconAndText_C="\"Object\" "
-HorizontalBox="\"Object\" \"Object.Layout.Slot.Object.Layout.Layout|Grid Slot.Padding\" "
+HorizontalBox="\"Object\" "
 Image="\"Object\" \"Object.Appearance.Brush\" \"Object.Appearance.Brush.ImageSize\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Alignment\" "
 ScaleBox="\"Object\" "
 SizeBox="\"Object\" "
@@ -918,35 +920,41 @@ BlockingVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 CameraActor="\"Object\" "
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 DebuggerAttached=False
-RecentAssetEditors=
-RecentAssetEditors=
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=PhysicsAssetEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=TextureEditor
+RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=TextureEditor
 RecentAssetEditors=TextureEditor
 RecentAssetEditors=TextureEditor
 RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=AnimationBlueprintEditor
-RecentAssetEditors=MaterialInstanceEditor
-RecentAssetEditors=SkeletonEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=StaticMeshEditor
-RecentAssetEditors=StaticMeshEditor
-RecentAssetEditors=MaterialInstanceEditor
-RecentAssetEditors=MaterialInstanceEditor
-RecentAssetEditors=SkeletalMeshEditor
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=MaterialInstanceEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+OpenAssetsAtExit=/Game/Sounds/BP_SoundManager.BP_SoundManager
+OpenAssetsAtExit=/Game/UI/Components/Menu/WBP_Settings_Sound.WBP_Settings_Sound
+OpenAssetsAtExit=/Game/Core/BPI_GameMode_new.BPI_GameMode_new
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -2392,6 +2400,16 @@ NiagaraActor.Replication=True
 NiagaraActor.Physics=True
 NiagaraActor.Networking=True
 NiagaraActor.Actor=True
+BP_SoundManager_C.Tick=True
+BP_SoundManager_C.Replication=True
+BP_SoundManager_C.Rendering=True
+BP_SoundManager_C.Collision=True
+BP_SoundManager_C.Actor=True
+BP_SoundManager_C.Input=True
+BP_SoundManager_C.HLOD=True
+BP_SoundManager_C.Physics=True
+BP_SoundManager_C.Events=True
+Texture2D.Interchange =True
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -2408,32 +2426,36 @@ MinimapUnloadedOpacity=0.660000
 PerWorldEditorSettings=(("/Game/TopDown/Maps/TopDownMap.TopDownMap", ()),("/Game/TopDown/Maps/TestGroundsNelio.TestGroundsNelio", ()),("/Game/Maps/Nelio/TestGroundsNelio.TestGroundsNelio", ()))
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Maps/Max/MainMenu1
-MRUItem1=/Game/UI/Components/Menu/MainMenu
-MRUItem2=/Game/Maps/Onno/BP_StartScreenCharacter
-MRUItem3=/Game/Maps/Onno/Main_Onno
-MRUItem4=/Game/TopDown/Blueprints/BP_Spawn
-MRUItem5=/Game/Maps/Onno/Player/BullfrogNew_WithworkingRigify_PhysicsAsset
-MRUItem6=/Game/Core/BP_FrogFU_HUD
-MRUItem7=/Game/Maps/Onno/BPI_PlayerHealthUpdate
-MRUItem8=/Game/Maps/Onno/ProtagHealthbar_-_Health
-MRUItem9=/Game/UI/Components/Gameplay/WBP_MainHUDWidget
-MRUItem10=/Game/Maps/Onno/EnemyHealthbar_-_Frame
-MRUItem11=/Game/Maps/Onno/EnemyHealthbar_-_Health
-MRUItem12=/Game/Maps/Onno/ProtagHealthbar_-_Frame
-MRUItem13=/Game/Maps/Onno/WBP_EnemyHealthbar
-MRUItem14=/Game/Maps/Onno/WBP_Healthbar
-MRUItem15=/Game/Maps/Onno/AI/ABP_AICharacter
-MRUItem16=/Game/Maps/Max/M_FullColor_Inst12
-MRUItem17=/Game/Maps/Onno/Player/BullfrogNew_WithworkingRigify_Skeleton
-MRUItem18=/Game/Maps/Onno/Player/Anim_0_rig
-MRUItem19=/Game/Maps/Onno/Player/Brille
-MRUItem20=/Game/Maps/Onno/Player/Irokese
-MRUItem21=/Game/Maps/Max/M_FullColorEmission_Inst1
-MRUItem22=/Game/Maps/Max/M_FullColor_Inst11
-MRUItem23=/Game/Maps/Onno/Player/BullfrogNew_WithworkingRigify
-MRUItem24=/Game/Maps/Max/M_FullColor
-MRUItem25=/Game/Maps/Max/M_FullColor_Inst10
+MRUItem0=/Game/Core/BPI_GameMode_new
+MRUItem1=/Game/UI/Components/Menu/WBP_Settings_Sound
+MRUItem2=/Game/Maps/Onno/WBP_EnemyHealthbar
+MRUItem3=/Game/Maps/Onno/EnemyHealthbar_-_Health
+MRUItem4=/Game/Maps/Onno/ProtagHealthbar_-_Health
+MRUItem5=/Game/Maps/Onno/ProtagHealthbar_-_Frame
+MRUItem6=/Game/Maps/Onno/WBP_Healthbar
+MRUItem7=/Game/Sounds/BPI_SoundManager
+MRUItem8=/Game/Sounds/BP_SoundManager
+MRUItem9=/Game/Maps/Max/MainMenu1
+MRUItem10=/Game/UI/Components/Menu/MainMenu
+MRUItem11=/Game/Maps/Onno/BP_StartScreenCharacter
+MRUItem12=/Game/Maps/Onno/Main_Onno
+MRUItem13=/Game/TopDown/Blueprints/BP_Spawn
+MRUItem14=/Game/Maps/Onno/Player/BullfrogNew_WithworkingRigify_PhysicsAsset
+MRUItem15=/Game/Core/BP_FrogFU_HUD
+MRUItem16=/Game/Maps/Onno/BPI_PlayerHealthUpdate
+MRUItem17=/Game/UI/Components/Gameplay/WBP_MainHUDWidget
+MRUItem18=/Game/Maps/Onno/EnemyHealthbar_-_Frame
+MRUItem19=/Game/Maps/Onno/AI/ABP_AICharacter
+MRUItem20=/Game/Maps/Max/M_FullColor_Inst12
+MRUItem21=/Game/Maps/Onno/Player/BullfrogNew_WithworkingRigify_Skeleton
+MRUItem22=/Game/Maps/Onno/Player/Anim_0_rig
+MRUItem23=/Game/Maps/Onno/Player/Brille
+MRUItem24=/Game/Maps/Onno/Player/Irokese
+MRUItem25=/Game/Maps/Max/M_FullColorEmission_Inst1
+MRUItem26=/Game/Maps/Max/M_FullColor_Inst11
+MRUItem27=/Game/Maps/Onno/Player/BullfrogNew_WithworkingRigify
+MRUItem28=/Game/Maps/Max/M_FullColor
+MRUItem29=/Game/Maps/Max/M_FullColor_Inst10
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDown/Input/Actions/IA_SetDestination_Click.IA_SetDestination_Click=0
@@ -2498,6 +2520,8 @@ MRUItem25=/Game/Maps/Max/M_FullColor_Inst10
 /Game/Maps/Onno/WBP_EnemyHealthbar.WBP_EnemyHealthbar=0
 /Game/Maps/Onno/AI/BP_SimpleAI.BP_SimpleAI=0
 /Game/Maps/Onno/BP_StartScreenCharacter.BP_StartScreenCharacter=0
+/Game/Sounds/BP_SoundManager.BP_SoundManager=0
+/Game/Sounds/BPI_SoundManager.BPI_SoundManager=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2521,8 +2545,8 @@ bHostFindInBlueprintsInGlobalTab=True
 bNavigateToNativeFunctionsFromCallNodes=True
 bDoubleClickNavigatesToParent=True
 bEnableTypePromotion=True
-TypePromotionPinDenyList=string
 TypePromotionPinDenyList=text
+TypePromotionPinDenyList=string
 BreakpointReloadMethod=RestoreAll
 bEnablePinValueInspectionTooltips=True
 bEnableNamespaceEditorFeatures=True
@@ -2556,6 +2580,7 @@ LastLogListing=BlueprintLog
 
 [DetailCategoriesAdvanced]
 PlayerStart.Actor=False
+HorizontalBox.Behavior=False
 
 [PlacementMode]
 RecentlyPlaced=/Script/Engine.CameraActor;/Engine/Transient.ActorFactoryCameraActor_0
@@ -3891,14 +3916,14 @@ AnimationEditor.TimeStamp=2024.11.14-21.41.59
 AnimationEditor.LastCompileMethod=Unknown
 PhysicsAssetEditor.TimeStamp=2024.11.14-21.42.05
 PhysicsAssetEditor.LastCompileMethod=Unknown
-TextureEditor.TimeStamp=2024.11.14-21.42.07
-TextureEditor.LastCompileMethod=Unknown
+TextureEditor.TimeStamp=2024.12.09-10.05.22
+TextureEditor.LastCompileMethod=External
 
 [Python]
 LastDirectory=
+RecentsFiles=D:/UE_5.5/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=E:/Unreal/UE_5.5/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=E:/Software/Unreal/UE_5.5/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
-RecentsFiles=D:/UE_5.5/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
