--- a/FrogFu/Config/DefaultEngine.ini
+++ b/FrogFu/Config/DefaultEngine.ini
@@ -130,3 +130,8 @@ ManualIPAddress=
 [/Script/Engine.UserInterfaceSettings]
 RenderFocusRule=Never
 
+[/Script/Engine.AudioSettings]
+DefaultSoundClassName=/Game/Sounds/ASC_Master.ASC_Master
+DefaultMediaSoundClassName=/Game/Sounds/ASC_Master.ASC_Master
+DefaultBaseSoundMix=/Game/Sounds/ASCM_Master.ASCM_Master
+
