--- a/FrogFu/Config/DefaultEngine.ini
+++ b/FrogFu/Config/DefaultEngine.ini
@@ -2,8 +2,8 @@
 GameName=FrogFu
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/TopDown/Maps/TopDownMap.TopDownMap
-GameDefaultMap=/Game/TopDown/Maps/TopDownMap.TopDownMap
+EditorStartupMap=None
+GameDefaultMap=/Game/Maps/Max/MainMenu1.MainMenu1
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
