--- a/FrogFu/Config/DefaultGame.ini
+++ b/FrogFu/Config/DefaultGame.ini
@@ -1,13 +1,13 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=34B84D8845CBF047CCA91F8BDDDDF21A
-ProjectName=Top Down BP Game Template
+ProjectName=FrogFu
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 Build=IfProjectHasCode
-BuildConfiguration=PPBC_Development
-BuildTarget=
-FullRebuild=False
-ForDistribution=False
+BuildConfiguration=PPBC_Shipping
+BuildTarget=FrogFu
+FullRebuild=True
+ForDistribution=True
 IncludeDebugFiles=False
 BlueprintNativizationMethod=Disabled
 bIncludeNativizedAssetsInProjectGeneration=False
