--- a/FrogFu/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/FrogFu/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -1465,7 +1465,7 @@ MoviePlayerSettings.Movies=True
 ProjectPackagingSettings.CustomBuilds=True
 ProjectPackagingSettings.Packaging=True
 ProjectPackagingSettings.Project=True
-ProjectPackagingSettings.Prerequisites=True
+ProjectPackagingSettings.Prerequisites=False
 HardwareTargetingSettings.Target Hardware=True
 HardwareTargetingSettings.Pending Changes=True
 AssetManagerSettings.Asset Manager=True
@@ -1523,7 +1523,6 @@ InputTriggerPulse.Trigger Settings=True
 EnhancedInputDeveloperSettings.Trigger Default Values=True
 EnhancedInputEditorProjectSettings.Default=True
 MegascansMaterialParentSettings.Parent Materials=True
-InterchangeFbxSettings.FBX=True
 InterchangeFbxSettings.FBX=True
 InterchangeFbxSettings.FBX=True
 InterchangeFbxSettings.FBX=True
@@ -2772,6 +2771,7 @@ SoundNodeWaveParam.WaveParam=True
 RecastNavMesh.TransformCommon=True
 K2Node_SwitchInteger.PinOptions=True
 BP_Heal_C.Default=True
+InterchangeFbxSettings.FBX =True
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -4346,8 +4346,6 @@ TurnkeyIO.TimeStamp=2024.12.09-10.05.22
 TurnkeyIO.LastCompileMethod=Unknown
 UATHelper.TimeStamp=2024.12.09-10.05.22
 UATHelper.LastCompileMethod=Unknown
-NullDrv.TimeStamp=2024.12.09-10.05.17
-NullDrv.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
