--- a/FrogFu/Config/DefaultEngine.ini
+++ b/FrogFu/Config/DefaultEngine.ini
@@ -61,12 +61,13 @@ r.AllowStaticLighting=False
 
 r.SkinCache.CompileShaders=True
 
-r.RayTracing=True
+r.RayTracing=False
 
 r.DefaultFeature.LocalExposure.HighlightContrastScale=0.8
 
 r.DefaultFeature.LocalExposure.ShadowContrastScale=0.8
 r.DefaultFeature.AutoExposure=False
+r.Lumen.HardwareRayTracing=False
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
